Parser NLP sem suporte a não determinismo em funcionamento! Gera autômato carregando informações de rótulos nos estados Reconhecedor (APE) automaticamente construído tratando corretamente transições em vazio. Lookahead 0. Carregamento de dicionário morfológico gerado por programa em Python via arquivo yaml Implementação de novo lexer (NLPLexer). Elimina transição em vazio quando estado source não tem outras transiçoes de saída e o estado target não tem outras transições chegando nele. Alteração TODO: no exporter/Transition para fazer a impressão dos rótulos em YAML
Correção de bugs.
Commit para backup no GitHub.